test/good/Indent.hs
{- ORMOLU_DISABLE -}
module Indent where

f = (x, y) where
        x = ()
  	y = ()
