test/bad/resolve/Loop.hs
module Loop (x) where

import Loop (x)
import Prelude ()

y = x
